fixed overflow

--- a/spa-web/src/app/components/public/login/login.component.scss
+++ b/spa-web/src/app/components/public/login/login.component.scss
@@ -18,3 +18,7 @@ small {
 .loginForm{
     width: 100%;
 }
+
+::ng-deep .mat-mdc-tab-body-content {
+    overflow: hidden !important; /* Disable scroll */
+}
